<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        
    <!-- RESPONSE -->
    <LinearLayout
        android:id="@+id/response_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"        
        android:focusable="true">
        <TextView
            android:id="@+id/response_label"
            android:text="@string/view_event_response_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/ic_event_response"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            style="@style/TextAppearance.EditEvent_Value" />
        <RadioGroup
            android:id="@+id/response_value"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
            <RadioButton
                android:id="@+id/response_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="128dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/TextAppearance.EditEvent"
                android:text="@string/response_yes" />
            <RadioButton
                android:id="@+id/response_maybe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="128dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/TextAppearance.EditEvent"
                android:text="@string/response_maybe" />
            <RadioButton
                android:id="@+id/response_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="128dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/TextAppearance.EditEvent"
                android:text="@string/response_no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/organizer_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:focusable="true">
        <TextView
            android:id="@+id/organizer_label"
            android:text="@string/view_event_organizer_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.EditEvent_Value" 
            android:drawableLeft="@drawable/ic_event_calendar"
            android:drawablePadding="8dp" />
        <TextView
            android:id="@+id/organizer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.EditEvent_Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_attendees_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >
        <TextView
            android:text="@string/attendees_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.EditEvent_Value"
            android:drawableLeft="@drawable/ic_event_guests"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground" />
        <com.android.ex.chips.RecipientEditTextView
            android:id="@+id/attendees"
            android:layout_marginTop="2dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textMultiLine|textCapWords"
            android:hint="@string/hint_attendees"
            android:imeOptions="actionNext"
            style="@style/TextAppearance.EditEvent_Value" />
    </LinearLayout>

    <!-- REMINDERS -->
    
    <TextView
        android:id="@+id/reminder_add"
        style="@style/TextAppearance.EditEvent_Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/accessibility_add_reminder"
        android:drawableLeft="@drawable/ic_event_reminder"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:text="@string/reminders_label" />
    
    <LinearLayout
        android:id="@+id/reminder_items_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

       <!-- PRESENCE - Show me as [busy | available] -->
    <LinearLayout
        android:id="@+id/availability_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip">
        <TextView
            android:id="@+id/presence_label"
            android:text="@string/presence_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.EditEvent_Value" />
        <Spinner
            android:id="@+id/availability"
            android:entries="@array/availability"
            style="@style/TextAppearance.EditEvent_Spinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:contentDescription="@string/accessibility_reminder_showmeas"
            android:prompt="@string/presence_label" />
    </LinearLayout>

        <!-- PRIVACY -->
    <LinearLayout
        android:id="@+id/visibility_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >
        <TextView
            android:id="@+id/privacy_label"
            android:text="@string/privacy_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.EditEvent_Value" />
        <Spinner
            android:id="@+id/visibility"
            android:entries="@array/visibility"
            style="@style/TextAppearance.EditEvent_Spinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:contentDescription="@string/accessibility_reminder_privacy"
            android:prompt="@string/privacy_label" />
    </LinearLayout>

</LinearLayout>
